feat: update report ui